# hestia

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Hestia.sln  LICENSE  Makefile  PLAN.md  README.md  deny.toml  dist-workspace.toml  go.mod  go.sum
apps/cli/: CMakeLists.txt
apps/cli/src/: cli.cc  cli.h  command.cc  command.h  main.cc  output.cc  output.h  registry.cc  registry.h
apps/cli/src/commands/: auth_command.cc  auth_command.h  autostart_command.cc  autostart_command.h  cache_command.cc  cache_command.h  config_command.cc  config_command.h  daemon_command.cc  daemon_command.h  download_command.cc  download_command.h  greet_command.cc  greet_command.h  java_command.cc  java_command.h  tui_command.cc  tui_command.h
apps/daemon/: CMakeLists.txt
apps/daemon/src/: autostart.cc  download_manager.cc  download_manager.h  handler_context.h  liveness_probe.cc  liveness_probe.h  main.cc  process_spawner.cc  process_spawner.h  process_supervisor.cc  process_supervisor.h  restart_policy.h
apps/daemon/src/accounts/: login_manager.cc  login_manager.h
apps/daemon/src/downloads/: download_manager.cc  download_manager.h
apps/daemon/src/java/: install_manager.cc  install_manager.h
apps/daemon/src/platform/: autostart.cc  autostart.h  win_util.h
apps/daemon/src/process/: liveness_probe.cc  liveness_probe.h  log_streamer.cc  log_streamer.h  process_spawner.cc  process_spawner.h  process_supervisor.cc  process_supervisor.h  process_table.cc  process_table.h  process_types.h  restart_policy.h
apps/daemon/src/runtime/: channels.h  event_hub.h  handler_context.h  router.cc  router.h  runtime.h  server.cc  server.h
apps/daemon/src/services/: accounts_service.cc  accounts_service.h  app_service.cc  app_service.h  autostart_service.cc  autostart_service.h  cache_service.cc  cache_service.h  config_service.cc  config_service.h  daemon_service.cc  daemon_service.h  downloads_service.cc  downloads_service.h  events_service.cc  events_service.h  health_service.cc  health_service.h  java_service.cc  java_service.h  process_service.cc  process_service.h  registry.cc  registry.h  service.h  services.h
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs  ui.rs
crates/cli/src/commands/: account.rs  auth.rs  cache.rs  config.rs  content.rs  daemon.rs  instance.rs  java.rs  lifecycle.rs  mc.rs  mod.rs  play.rs  process.rs  server.rs  sync.rs  update.rs  wizard.rs
crates/cli/src/ui/: console.rs  interactive.rs  markdown.rs  mod.rs  progress.rs  render.rs  screen.rs  view.rs
crates/client/: Cargo.toml
crates/client/src/: facades.rs  lib.rs  session.rs  spawn.rs
crates/client/src/facades/: accounts.rs  app.rs  cache.rs  config.rs  content.rs  daemon.rs  instance.rs  java.rs  jobs.rs  mod.rs  process.rs  profiles.rs  server.rs  skins.rs  sync.rs  update.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: app.rs  lib.rs  logging.rs  paths.rs  rolling.rs
crates/daemon/: Cargo.toml
crates/daemon/assets/: autostart.desktop  autostart_task.xml
crates/daemon/src/: autostart.rs  main.rs  server.rs  services.rs  tray.rs
crates/daemon/src/autostart/: linux.rs  mod.rs  unsupported.rs  windows.rs
crates/daemon/src/runtime/: event_hub.rs  managers.rs  metrics.rs  mod.rs  process.rs  router.rs  scheduler.rs
crates/daemon/src/services/: accounts.rs  backup.rs  cache.rs  config.rs  content.rs  download.rs  guards.rs  instance.rs  java.rs  lifecycle.rs  mod.rs  process.rs  profile.rs  server.rs  skins.rs  sync.rs  update.rs
crates/daemon/tests/: e2e.rs
crates/desktop/: .gitignore  Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: api.rs  auth.rs  bridge.rs  lib.rs  main.rs
crates/desktop/src/commands/: auth.rs  icons.rs  mod.rs  prefs.rs
crates/desktop/windows/: installer.nsi
crates/engine/: Cargo.toml
crates/engine/assets/: session_log4j2.xml
crates/engine/src/: backup.rs  cache.rs  checksum.rs  config.rs  download.rs  engine.rs  instances.rs  lib.rs  profiles.rs  registry.rs  servers.rs  sync.rs  update.rs  usage.rs
crates/engine/src/accounts/: microsoft.rs  mod.rs  signing.rs
crates/engine/src/content/: inspect.rs  install.rs  mod.rs  modrinth.rs  profiles.rs  provider.rs
crates/engine/src/engine/: mod.rs
crates/engine/src/java/: adoptium.rs  extract.rs  mod.rs  platform.rs
crates/engine/src/minecraft/: fabric.rs  launch.rs  log4j.rs  materialize.rs  mod.rs  ping.rs  provider.rs  rcon.rs  vanilla.rs
crates/engine/src/skins/: defaults.rs  mod.rs  mojang.rs
crates/engine/src/sync/: link.rs  mod.rs
crates/engine/tests/: auth_oracle.rs  store.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: endpoint.rs  errors.rs  lib.rs  protocol.rs  transport.rs
crates/tray/: Cargo.toml
crates/tray/src/: desktop.rs  icon.rs  lock.rs  main.rs  menu.rs  worker.rs
libs/engine/: CMakeLists.txt
libs/engine/include/hestia/: config.h
libs/engine/src/: checksum.cc  config.cc  config_store.cc  downloader.cc  engine.cc
libs/engine/src/accounts/: accounts.cc  microsoft.cc  microsoft.h  signing.cc  signing.h  signing_openssl.cc  signing_windows.cc
libs/engine/src/cache/: cache.cc
libs/engine/src/config/: config.cc  (+1 more)
libs/shared/: CMakeLists.txt
libs/shared/src/: bridge.cc  client.cc  download_codec.cc  endpoint.cc  java_codec.cc  logging.cc  paths.cc  process_codec.cc  protocol.cc  transport_posix.cc  transport_windows.cc
tests/: CMakeLists.txt
tests/Hestia.Core.Tests/: AppInfoServiceTests.cs  Hestia.Core.Tests.csproj
tests/Hestia.Tui.Tests/: CommandVmTests.cs  Hestia.Tui.Tests.csproj  RingBufferTests.cs
tests/engine/: cache_test.cc  checksum_test.cc  config_store_test.cc  config_test.cc  downloader_test.cc  engine_test.cc  greeting_test.cc  java_test.cc
tests/shared/: download_codec_test.cc  download_proto_test.cc  endpoint_test.cc  java_codec_test.cc  java_proto_test.cc  paths_test.cc  process_codec_test.cc  process_proto_test.cc  protocol_test.cc  transport_test.cc
(+1010 files in other folders)
