[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
proto = { path = "crates/proto" }
ipc = { path = "crates/ipc" }
common = { path = "crates/common" }
client = { path = "crates/client" }
engine = { path = "crates/engine" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "fs", "signal", "process"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
