[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.85"
publish = false

[workspace.dependencies]
proto = { path = "crates/proto" }
ipc = { path = "crates/ipc" }
common = { path = "crates/common" }
client = { path = "crates/client" }
engine = { path = "crates/engine" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
anyhow = "1.0.103"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "fs", "signal", "process"] }
futures-util = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
clap = { version = "4.6.1", features = ["derive"] }
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
tui-markdown = { version = "0.3.8", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream", "form", "query"] }
tray-icon = { version = "0.24.1", default-features = false, features = ["gtk"] }
tao = "0.35.3"
png = "0.18.1"
sha1 = "0.11"
sha2 = "0.11"
tar = "0.4.46"
flate2 = "1.1.9"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
