[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "hestia"
path = "src/main.rs"

[dependencies]
client = { workspace = true }
common = { workspace = true }
proto = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
tui-markdown = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
