[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
flate2 = { workspace = true }

# husky-rs installs the repo's git hooks (.husky/) via its build script on
# `cargo test`. The virtual workspace has no root package to host it, so it lives
# on this foundational leaf crate, which every `cargo test` compiles.
[dev-dependencies]
husky-rs = "0.3.3"
