[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hestiad"
path = "src/main.rs"

[dependencies]
engine = { workspace = true }
proto = { workspace = true }
ipc = { workspace = true }
common = { workspace = true }
client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
