[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
proto = { workspace = true }
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
p256 = { version = "0.14.0", features = ["ecdsa"] }
getrandom = "0.4"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }
